[gd_scene load_steps=3 format=2]

[ext_resource path="res://Resoure_editer2.1/Input.gd" type="Script" id=1]
[ext_resource path="res://icon.png" type="Texture" id=2]

[node name="Input" type="Control"]
margin_top = 1.0
margin_right = 220.0
margin_bottom = 37.0
rect_min_size = Vector2( 220, 32 )
mouse_filter = 2
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = 2.0
margin_top = 1.0
margin_right = 216.0
margin_bottom = 32.0
mouse_filter = 2
color = Color( 0.027451, 0.0117647, 0.0117647, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextEdit" type="TextEdit" parent="."]
visible = false
margin_left = 115.0
margin_top = 3.0
margin_right = 215.0
margin_bottom = 28.0
text = "Text"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="X" type="TextEdit" parent="."]
visible = false
margin_left = 115.0
margin_top = 3.0
margin_right = 159.0
margin_bottom = 28.0
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Y" type="TextEdit" parent="."]
visible = false
margin_left = 168.0
margin_top = 3.0
margin_right = 215.0
margin_bottom = 28.0
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
margin_left = 7.5
margin_top = 8.72725
margin_right = 47.5
margin_bottom = 22.7272
text = "Editer"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="."]
visible = false
position = Vector2( 183.08, 39.1995 )
texture = ExtResource( 2 )

[node name="Button" type="Button" parent="."]
visible = false
margin_left = 124.0
margin_top = 6.0
margin_right = 215.0
margin_bottom = 27.0
text = "Dez"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MenuButton" type="MenuButton" parent="."]
visible = false
margin_left = 124.646
margin_top = 6.0
margin_right = 214.646
margin_bottom = 26.0
focus_mode = 2
text = "open"
flat = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FileDialog" type="FileDialog" parent="."]
margin_left = 224.0
margin_top = 98.0
margin_right = 675.0
margin_bottom = 363.0
window_title = "Open a File"
resizable = true
mode = 0
filters = PoolStringArray( "*.png" )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CheckBox" type="CheckBox" parent="."]
visible = false
margin_left = 179.336
margin_top = 2.83162
margin_right = 203.336
margin_bottom = 26.8316
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Scroll_text" type="ScrollContainer" parent="."]
visible = false
margin_left = 6.0
margin_top = 40.0
margin_right = 214.0
margin_bottom = 66.0
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Text" type="Label" parent="Scroll_text"]
margin_right = 34.0
margin_bottom = 14.0
text = "res://"

[connection signal="text_changed" from="TextEdit" to="." method="_on_TextEdit_text_changed"]
[connection signal="text_changed" from="X" to="." method="_on_TextEdit_text_changed"]
[connection signal="text_changed" from="Y" to="." method="_on_TextEdit_text_changed"]
[connection signal="button_down" from="Button" to="." method="_on_Button_button_down"]
[connection signal="button_down" from="CheckBox" to="." method="_on_CheckBox_button_down"]
